<resources>
    <string name="app_name">Android-3</string>
    <string name="name">Name</string>
    <string name="you_ordered_adonut">You Ordered aDonut</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="note">Note</string>
    <string name="choose_delivery_method">Choose Delivery Method</string>
    <string name="same_day_messenger_service">Same Day Messenger Service</string>
    <string name="next_day_ground_delivery">Next Day Ground Delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_note">Enter note</string>
</resources>