<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/img_1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_donut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/you_ordered_adonut"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_donut" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/enter_name"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/enter_address"
        android:maxLines="10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        app:layout_constraintTop_toTopOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_phone"
        app:layout_constraintTop_toTopOf="@+id/tv_phone" />

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/note"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/akaya_telivigala"
        android:hint="@string/enter_note"
        android:maxLines="10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_note"
        app:layout_constraintTop_toTopOf="@+id/tv_note" />

    <TextView
        android:id="@+id/tv_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/akaya_telivigala"
        android:text="@string/choose_delivery_method"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_note" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_method"
        app:layout_constraintTop_toBottomOf="@+id/tv_method">

        <RadioButton
            android:id="@+id/rb_same_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="top"
            android:text="@string/same_day_messenger_service"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tv_method"
            app:layout_constraintTop_toBottomOf="@+id/tv_method" />

        <RadioButton
            android:id="@+id/rb_next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="top"
            android:text="@string/next_day_ground_delivery"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tv_method"
            app:layout_constraintTop_toBottomOf="@+id/rb_same_day" />

        <RadioButton
            android:id="@+id/rb_pick_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akaya_telivigala"
            android:gravity="top"
            android:text="@string/pick_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/tv_method"
            app:layout_constraintTop_toBottomOf="@+id/rb_next_day" />


    </RadioGroup>


    <Spinner
        android:id="@+id/label_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>